==> stt920/6666666666/project/6lowsn/6lowsn/节点/6lowsn_stack_780M_v1.2/6lowsn_stack_6.9/6lowsn_stack/src/stack/target/stm32/common/halStack.c <==
#include "compiler.h"
#include "hal.h"
#include "halStack.h"
#include "console.h"
#include "debug.h"
#include "ieee_lrwpan_defs.h"
#include "memalloc.h"
#include "phy.h"
#include "mac.h"
#include <string.h>
#include "cc1101_spi.h"
#include "AT86RF212.h"
#include "_STM32F107_Console.h"
#define BV(n)      (1 << (n))
#define MRFI_RSSI_OFFSET    74   /* no units */
#define MRFI_RSSI_VALID_DELAY_US    1300
#define MRFI_GDO_SYNC           6
#define MRFI_GDO_CCA            9
#define MRFI_GDO_PA_PD          27  /* low when transmit is active, low during sleep */
#define MRFI_GDO_LNA_PD         28  /* low when receive is active, low during sleep */
#define MRFI_RADIO_PARTNUM          0x00
#define MRFI_RADIO_MIN_VERSION      4
#define MRFI_SETTING_IOCFG0     MRFI_GDO_SYNC
#define MRFI_SETTING_MCSM0      (0x10 | (SMARTRF_SETTING_MCSM0 & (BV(2)|BV(3))))
#define MRFI_SETTING_MCSM1      0x3C
#define MRFI_SETTING_PKTLEN     0xFF
#define MRFI_SETTING_PKTCTRL0    0x05
#define MRFI_SETTING_PKTCTRL1  0x04
#define MRFI_SETTING_FIFOTHR    0x0E
#define MRFI_XTAL_FREQ_Hz 26000000L
#define MRFI_SYNC_WORD_SIZE ( ( (SMARTRF_SETTING_MDMCFG2 & 0x3) == 0 ) ? 0 : \
                            ( ( (SMARTRF_SETTING_MDMCFG2 & 0x3) != 3 ) ? 2 : 4 ) )

void halInit(void)
{
  //Set clock source
  local_radio_flags.val = 0;
  //SET_MAIN_CLOCK_SOURCE(CRYSTAL);
    /* Configure the NVIC Preemption Priority Bits */  
  // 设置抢占优先级从0-1，响应优先级从0到7，将系统定时器的优先级设定为最高
  NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
  halInitUart();
  halInitMACTimer();
  halInitLed();
  halInitRFChip();      //pu 2014.2.17
}

void halInitUart(void)
{
    RCC_APB1PeriphClockCmd( RCC_APB1Periph_USART2, ENABLE );
    RCC_APB2PeriphClockCmd( RCC_APB2Periph_AFIO, ENABLE );
    RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOD, ENABLE );
    USART_InitTypeDef USART_InitStruct;
    NVIC_InitTypeDef   NVIC_InitStructure;
    GPIO_InitTypeDef GPIO_InitStructure;
   
     /*配置Tx-------------------*/
    GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_5;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(GPIOD, &GPIO_InitStructure);
    
     /*配置Rx-------------------*/
    GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_6;
//    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode =  GPIO_Mode_IN_FLOATING;
    GPIO_Init(GPIOD, &GPIO_InitStructure);
    
    /* Enable the USART2 Pins Software Remapping */
    GPIO_PinRemapConfig(GPIO_Remap_USART2, ENABLE); 
    
    NVIC_PriorityGroupConfig(NVIC_PriorityGroup_1);
    NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority =3;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 7;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
    
    serio_rxHead = 0;
    serio_rxTail = 0;
    
    /* USART_InitStruct members default value */
    USART_InitStruct.USART_BaudRate = 115200;
    USART_InitStruct.USART_WordLength = USART_WordLength_8b;
    USART_InitStruct.USART_StopBits = USART_StopBits_1;
    USART_InitStruct.USART_Parity = USART_Parity_No ;
    USART_InitStruct.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_InitStruct.USART_HardwareFlowControl = USART_HardwareFlowControl_None; 
    
    USART_Init(USART2, &USART_InitStruct);
    /* Disable USARTy Receive and Transmit interrupts */
    USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);
//    USART_ITConfig(USART2, USART_IT_TXE, DISABLE);
    USART_Cmd(USART2,ENABLE);
    
    USART_ClearFlag(USART2, USART_FLAG_TC);     // 清标志
}

void halInitUart(void) 
{

  USART_InitTypeDef USART_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;
  
 /* System Clocks Configuration */
  /* Enable GPIO clock */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA |RCC_APB2Periph_AFIO, ENABLE);
  /* Enable USART1 Clock */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE); 

  #ifdef LOWSN_ASYNC_INTIO       
  /* NVIC configuration */
  NVIC_InitTypeDef NVIC_InitStructure;

  /* Enable the USART1 Interrupt */
  NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 7;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
  
  serio_rxHead = 0;
  serio_rxTail = 0;
  #endif

  /* Configure the GPIO ports */
  /* Configure USART1 Rx as input floating */
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
  GPIO_Init(GPIOA, &GPIO_InitStructure);
  
  /* Configure USART1 Tx as alternate function push-pull */
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(GPIOA, &GPIO_InitStructure);

  USART_InitStructure.USART_BaudRate = 115200;
  USART_InitStructure.USART_WordLength = USART_WordLength_8b;
  USART_InitStructure.USART_StopBits = USART_StopBits_1;
  USART_InitStructure.USART_Parity = USART_Parity_No;
  USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
  USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

  /* Configure USART1 */
  USART_Init(USART1, &USART_InitStructure);

  #ifdef LOWSN_ASYNC_INTIO   
   USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
   #endif

  /* Enable the USART1 */
  USART_Cmd(USART1, ENABLE);

}

void halPutch(char c)
{

    USART_SendData(USART1, (int8_t)c);
	
    while(USART_GetFlagStatus(USART1, USART_FLAG_TC) == RESET)
    //while(USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET)
    {
    }
	
}

void halRawPut(char c) 
{

    USART_SendData(USART1, (int8_t)c);
	
    while(USART_GetFlagStatus(USART1, USART_FLAG_TC) == RESET)
    //while(USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET)
    {
    }

    
	
}

char halGetch(void)
{
    char x;
    do {
      x = serio_rxHead;  //use tmp because of volt decl
    }  while(serio_rxTail == x);
    serio_rxTail++;
   if (serio_rxTail == LOWSN_ASYNC_RX_BUFSIZE) serio_rxTail = 0;
   return (serio_rxBuff[serio_rxTail]);
}

char halGetch(void)
{
   char c;

    while(USART_GetFlagStatus(USART1, USART_FLAG_RXNE) == RESET)
    {
    }

    c = (USART_ReceiveData(USART1) & 0xFF);  

    return c;
	
}

void halInitMACTimer(void) 
{

  TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
  TIM_OCInitTypeDef  TIM_OCInitStructure;
  NVIC_InitTypeDef NVIC_InitStructure;
  uint16_t PrescalerValue;

  /* PCLK1 = HCLK/4 */
  RCC_PCLK1Config(RCC_HCLK_Div4);
  /* TIM2 clock enable */
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
  /* GPIOC clock enable */
 // RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);


  /* Enable the TIM2 global Interrupt */
  NVIC_InitStructure.NVIC_IRQChannel = TIM2_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);

  /* Compute the prescaler value */
  PrescalerValue = (uint16_t) (SystemCoreClock * 8 / 1000000) - 1;

  /* Time base configuration */
  TIM_TimeBaseStructure.TIM_Period = 65535;
  TIM_TimeBaseStructure.TIM_Prescaler = 0;
  TIM_TimeBaseStructure.TIM_ClockDivision = 0;
  TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;

  TIM_TimeBaseInit(TIM2, &TIM_TimeBaseStructure);
  TIM_PrescalerConfig(TIM2, PrescalerValue, TIM_PSCReloadMode_Immediate);

  #ifdef LOWSN_ENABLE_SLOW_TIMER

  /* Output Compare Timing Mode configuration: Channel1 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
   // TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = CCR1_VAL;
  TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;

  TIM_OC1Init(TIM2, &TIM_OCInitStructure);
  TIM_OC1PreloadConfig(TIM2, TIM_OCPreload_Disable);

  #endif

  /* TIM IT enable */
  #ifdef LOWSN_ENABLE_SLOW_TIMER
  TIM_ITConfig(TIM2, TIM_IT_Update | TIM_IT_CC1, ENABLE);
  #else
  TIM_ITConfig(TIM2, TIM_IT_Update, ENABLE);
  #endif

  mac_timer_upper_byte = 0;

  /* TIM2 enable counter */
  TIM_Cmd(TIM2, ENABLE);

}

UINT32 halGetMACTimer(void) 
{
  UINT32 t;
  //BOOL gie_status;

  //SAVE_AND_DISABLE_GLOBAL_INTERRUPT(gie_status);
  t = TIM_GetCounter(TIM2);
  t += ((((UINT32) mac_timer_upper_byte) & 0x000000FF) << 16);
  //RESTORE_GLOBAL_INTERRUPT(gie_status);
  return (t & 0x00FFFFFF);
}

UINT32 halISRGetMACTimer(void)
{
  UINT32 t;
  //BOOL gie_status;

  //SAVE_AND_DISABLE_GLOBAL_INTERRUPT(gie_status);
  t = TIM_GetCounter(TIM2);
  t += (((UINT32) mac_timer_upper_byte & 0xFF)<<16);
  //RESTORE_GLOBAL_INTERRUPT(gie_status);
  return (t & 0x00FFFFFF);
}

LOWSN_STATUS_ENUM halSetRadioIEEEFrequency(PHY_FREQ_ENUM frequency, BYTE channel)
{
   if (frequency != PHY_FREQ_780M) return(LOWSN_STATUS_PHY_FAILED);
   if (channel >= MRFI_NUM_LOGICAL_CHANS) return(LOWSN_STATUS_PHY_FAILED);

    /* make sure radio is off before changing channels */
    //Mrfi_RxModeOff();

    //MRFI_WRITE_REGISTER( CHANNR, mrfiLogicalChanTable[channel] );

    /* turn radio back on if it was on before channel change */
    //if(mrfiRadioState == MRFI_RADIO_STATE_RX)
   // {
  //   Mrfi_RxModeOn();
  //  }
        trx_bit_write(SR_TRX_CMD, CMD_FORCE_TRX_OFF);	// Set to TRX_OFF
        while((trx_reg_read(RG_TRX_STATUS)&0x0f) != TRX_OFF)	// Check if it is TRX_OFF  
        {
          trx_bit_write(SR_TRX_CMD, CMD_FORCE_TRX_OFF);
        }
        trx_reg_write(RG_CC_CTRL_0,GET_CHINA_FREQ(channel));            //信道选择（CC_NUMBER），中心频率
        trx_reg_write(RG_CC_CTRL_1,0x04);            //信道选择（CC_NUMBER），中心频率

	RF212_Rx_Mode();
  
   return(LOWSN_STATUS_SUCCESS);
}

LOWSN_STATUS_ENUM halInitRadio(PHY_FREQ_ENUM frequency, BYTE channel, RADIO_FLAGS radio_flags)
{

  LOWSN_STATUS_ENUM status;
  
  AT86RF212_Init();
  
  // Setting the frequency
  status = halSetRadioIEEEFrequency(frequency, channel);  //pu
 // status = LOWSN_STATUS_SUCCESS;
  if (status != LOWSN_STATUS_SUCCESS) 
  {
       DEBUG_STRING(DBG_INFO, "AT86RF212: Setting channel failed. \n");
  	return(status);
  }
    
    RF212_Rx_Mode();  
  
  mrfiRadioState = MRFI_RADIO_STATE_RX;

   local_radio_flags = radio_flags;
   halSetRadioIEEEAddress();
 
   //2017.4.24
  DEBUG_STRING(DBG_INFO, "AT86RF212: Radio initialization is done. \n");
  
   return(LOWSN_STATUS_SUCCESS);
}

LOWSN_STATUS_ENUM halSendPacket(BYTE flen, BYTE *frm)
{
  LOWSN_STATUS_ENUM res = LOWSN_STATUS_SUCCESS;
  uint8_t ccaRetries;
  uint8_t len;

  //if you print out the packet, this can cause timeouts on waits
  //dbgPrintPacket(frm,flen+2);

  //上层传来的flen，不包括第一个长度字节，也不包括最后两个字节的CRC域
  // 在添加位于首部的长度字节时，若按IEEE 802.15.4标准，该字节的值等于其后负载字节数加上两个CRC字节数
  // 但按照CC1101的数据手册，该值应等于其后字节数，不包括CRC的两个字节。采用CC1101定义，否则接收时
  // 对字节的处理会出现混乱。

  len = flen;

  #if 1
  DEBUG_STRING(DBG_INFO, "AT86RF212: TX pkt Size: ");
  DEBUG_UINT8(DBG_INFO, flen);
  DEBUG_STRING(DBG_INFO,"\n");
  #endif
  
  if (flen > MRFI_MAX_FRAME_SIZE) {
    //packet size is too large!
    return(LOWSN_STATUS_PHY_TX_PKT_TOO_BIG);
  }

  RF212_Tx_Mode();
#if 1
  
   while(((trx_reg_read(RG_TRX_STATUS))&0x0f) != 0x09)	    // wait until PLL_ON
   {
       trx_bit_write(SR_TRX_CMD, CMD_PLL_ON);	
   }
      
  //  trx_frame_write (len+2,frm);                 //帧缓冲区写入
   if( doIEEE_backoff() )
   {
     //
	RF212_Tx_Mode();
	trx_frame_write (len+2,frm);                 //帧缓冲区写入 
	trx_bit_write(SR_TRX_CMD, CMD_TX_START);		// Start TX

	while((trx_reg_read(RG_TRX_STATUS)&0x0f) != 0x09);//PLL_ON);	// Wait for Tx end
        //  Rf231_SendPacket();    
        //STM32F107_Led_Toggle(2);      
	DEBUG_CHAR( DBG_ITRACE,DBG_CHAR_TXFIN );
	phyTxEndCallBack();
	macTxCallback();
	res = LOWSN_STATUS_SUCCESS;
   }
   else
   {
        res = LOWSN_STATUS_PHY_CHANNEL_BUSY;
   }
   goto test_point;

#endif

  test_point: 
  halLedToggle(0);  
  RF212_Rx_Mode();
  return(res); 
}
