==> stt920/6666666666/project/6lowsn/6lowsn/6lowsn_stack_780M_v1.2/6lowsn_stack_780M_v1.2/6lowsn_stack_6.9/6lowsn_stack/src/stack/target/iar51/cc2530/halStack.c <==
#include "compiler.h"
#include "hal.h"
#include "halStack.h"
#include "console.h"
#include "debug.h"
#include "ieee_lrwpan_defs.h"
#include "memalloc.h"
#include "phy.h"
#include "mac.h"
#define T2CMPVAL  64

void halInit(void)
{
  local_radio_flags.val = 0;
  SET_MAIN_CLOCK_SOURCE();
  halInitUart();
  halSetBaud(LOWSN_DEFAULT_BAUDRATE);
  halInitMACTimer();
}

void halInitUart(void) {

  IO_PER_LOC_UART0_AT_PORT0_PIN2345();
  UTX0IF = 1;

#ifdef LOWSN_ASYNC_INTIO
  serio_rxHead = 0;
  serio_rxTail = 0;
  INT_ENABLE_URX0(INT_ON);
#endif
}

void halPutch(char c)
{
  while (!UTX0IF);
  UTX0IF = 0;
  U0DBUF = c;
}

void halRawPut(char c)
{
  while (!UTX0IF);
  UTX0IF = 0;
  U0DBUF = c;
}

char halGetch(void){
  char x;
  do {
    x = serio_rxHead;  //use tmp because of volt decl
  }  while(serio_rxTail == x);
  serio_rxTail++;
  if (serio_rxTail == LOWSN_ASYNC_RX_BUFSIZE) serio_rxTail = 0;
  return (serio_rxBuff[serio_rxTail]);
}

char halGetch (void ){
  char c;

  while (!URX0IF);
  c = U0DBUF;
  URX0IF = FALSE;

  return c;
}

void halInitMACTimer(void)
{
       //使T2空闲，及确定其它寄存器的状态
	T2CTRL = 0x00;//T2控制寄存器
	T2IRQM = 0x00;//T2中断屏蔽

	//选  择T2M为定时周期 
	MAC_MCU_T2_ACCESS_PERIOD_VALUE();

       //定时周期320 * 31.25ns = 10000 ns = 10us
	//T2M0 = 0x40;
	//T2M1 = 0x01;

	// 总是需先读或写T2M0，然后再T2M1
	T2M0 = 0x00;  // (0x0200) / 32 = 16 u-seconds
	T2M1 = 0x02;  // setting for 16 u-second periods


	#ifdef LOWSN_ENABLE_SLOW_TIMER
	
	// 屏蔽TIMER2_PERIM中断
	T2IRQM &= ~TIMER2_PERM;
	
       //选择T2MOVF溢出中断
	MAC_MCU_T2_ACCESS_OVF_CMP1_VALUE();

	T2MOVF0 = (BYTE) (T2OVFNUM);
	T2MOVF1 = (BYTE) (T2OVFNUM>>8);
	T2MOVF2 = (BYTE) (T2OVFNUM>>16);

	//T2MOVF 比较中断使能
	T2IRQM |= TIMER2_OVF_COMPARE1M;
	   
	 #endif

       //设置LATCH_MODE
      // T2CTRL |= LATCH_MODE;
	T2CTRL &= ~LATCH_MODE;

	//启动T2，开始计时
	MAC_RADIO_TIMER_WAKE_UP();

	#ifdef LOWSN_ENABLE_SLOW_TIMER
       //清除中断标志位
	INT_SETFLAG_T2(INT_CLR);

       //打开T2中断使能
       INT_ENABLE_T2(INT_ON);

	 INT_GLOBAL_ENABLE(INT_ON);

	#endif

}

UINT32 halGetMACTimer(void)
{
  //UINT32 overflowCount;
  UINT32 t;
  BOOL gie_status;

  SAVE_AND_DISABLE_GLOBAL_INTERRUPT(gie_status);

 /* This T2 access macro allows accessing both T2MOVFx and T2Mx */
  MAC_MCU_T2_ACCESS_OVF_COUNT_VALUE();

  //读T2M0锁定定时器t2tim和溢出计数器t2ovf的值，然后读数值

  t = 0x0FF & T2MOVF0;
  t += (((UINT16)T2MOVF1)<<8);
  t += (((UINT32)T2MOVF2)<<16);

 // ((UINT8 *)&overflowCount)[UINT32_NDX0] = T2MOVF0;
 // ((UINT8 *)&overflowCount)[UINT32_NDX1] = T2MOVF1;
  //((UINT8 *)&overflowCount)[UINT32_NDX2] = T2MOVF2;
 // ((UINT8 *)&overflowCount)[UINT32_NDX3] = 0;

  RESTORE_GLOBAL_INTERRUPT(gie_status);
  //return (overflowCount);
  
  return (t);

  
}

UINT32 halISRGetMACTimer(void){
  UINT32 t;
  BOOL gie_status;

  SAVE_AND_DISABLE_GLOBAL_INTERRUPT(gie_status);
  t = 0x0FF & T2MOVF0;
  t += (((UINT16)T2MOVF1)<<8);
  t += (((UINT32) T2MOVF2 & 0x0F)<<16);
  RESTORE_GLOBAL_INTERRUPT(gie_status);
  return (t);
}

LOWSN_STATUS_ENUM halSetRadioIEEEFrequency(PHY_FREQ_ENUM frequency, BYTE channel)
{
  //UINT16 afreq;
  BOOL gie_status;

  if (frequency != PHY_FREQ_2405M) return(LOWSN_STATUS_PHY_FAILED);
  if ((channel < 11) || (channel > 28)) return(LOWSN_STATUS_PHY_FAILED);  //CC2530 supports channel 27 and 28.

  // enter critical code.

  SAVE_AND_DISABLE_GLOBAL_INTERRUPT(gie_status);

  // close RX state. Make sure it is not on the tranmiting state.

  // Rx off
  MAC_RADIO_RXTX_OFF();
  //just in case a receive was about to start, flush the receive FIFO

  MAC_RADIO_FLUSH_RX_FIFO();
  //clear any receive interrupt that happened to squeak through
  MAC_RADIO_CLEAR_RX_THRESHOLD_INTERRUPT_FLAG();

  // set Frequency register
  // FSCTRLH has no sense, because it always be 01.
  //MAC_RADIO_SET_CHANNEL(channel);
  FREQCTRL = FREQ_2405MHZ + 5 * ((channel) - 11);
  //afreq = 357 + 5*(channel - 11);
  //FSCTRLL = (BYTE) afreq;
  //FSCTRLH = ((FSCTRLH & ~0x03) | (BYTE)((afreq >> 8) & 0x03));

  // RX on
  MAC_RADIO_RX_ON();

  RESTORE_GLOBAL_INTERRUPT(gie_status);


  return(LOWSN_STATUS_SUCCESS);
}

LOWSN_STATUS_ENUM halInitRadio(PHY_FREQ_ENUM frequency, BYTE channel, RADIO_FLAGS radio_flags)
{
  LOWSN_STATUS_ENUM status;


  // Setting the frequency
  status = halSetRadioIEEEFrequency(frequency, channel);
  if (status != LOWSN_STATUS_SUCCESS)  return(status);


  		  /* This CORR_THR value should be changed to 0x14 before attempting RX. Testing has shown that
	   * too many false frames are received if the reset value is used. Make it more likely to detect
	   * sync by removing the requirement that both symbols in the SFD must have a correlation value
	   * above the correlation threshold, and make sync word detection less likely by raising the
	   * correlation threshold.
	   */
	  MDMCTRL1 = CORR_THR;

	  /* tuning adjustments for optimal radio performance; details available in datasheet */
	  RXCTRL = 0x3F;

	  /* Raises the CCA threshold from about -108dBm to about -80 dBm input level.
	   */
	 CCACTRL0 = CCA_THR;

	  /* Makes sync word detection less likely by requiring two zero symbols before the sync word.
	   * details available in datasheet.
	   */
	  MDMCTRL0 = 0x85;//控制调制调解器

	  /* Adjust current in synthesizer; details available in datasheet. */
	  FSCTRL = 0x5A;//调整频率合成器 全部复位

	  /* Adjust current in VCO; details available in datasheet. */
	  FSCAL1 = 0x00;//调整频率校准

	  /* Adjust target value for AGC control loop; details available in datasheet. */
	 AGCCTRL1 = 0x15;//AGC参考水平

	  /* Disable source address matching an autopend for now */
	  SRCMATCH = 0;//源地址匹配和未决位
/*
	  if (radio_flags.bits.pan_coordinator) {
	    FRMFILT0 |= PAN_COORDINATOR;  //accepts frames with only source addressing modes
	  } else {
	    FRMFILT0 &= ~PAN_COORDINATOR;  //rejects frames with only source addressing modes
	  }
*/
	  /* Sets TX anti-aliasing filter to appropriate bandwidth.
	   * Reduces spurious emissions close to signal.
	   */
	  TXFILTCFG = TXFILTCFG_RESET_VALUE;

	  /* disable the CSPT register compare function */
	 // CSPT = 0xFF;



	  /* set RF interrupts one notch above lowest priority (four levels available) */
	 // IP0 |=  IP_RFERR_RF_DMA_BV;
	 // IP1 &= ~IP_RFERR_RF_DMA_BV;

	//FRMCTRL0_RESET_VALUE: 初始值已经是自动CRC，TX和RX正常模式, 
	// APPEND_DATA_MODE模式为0, AUTO-ACK没有开启

	if (radio_flags.bits.listen_mode) {
    		//corresponds to promiscuous modes
    		//radio accepts all packets, the HUSSY!
		FRMFILT0 &= ~FRAME_FILTER_EN;
			
		FRMCTRL0 = FRMCTRL0_RESET_VALUEL &  (~AUTO_ACK);       //no auto ack
  	} else {
    		// Turning on Address Decoding
    		FRMFILT0 |=  FRAME_FILTER_EN;
   		 
		FRMCTRL0 = FRMCTRL0_RESET_VALUE | AUTOACK;  //enable auto_ack
  	}
	
  	local_radio_flags = radio_flags;  //save this for later

  	//pan
  	if (radio_flags.bits.pan_coordinator) {
   		 FRMFILT0 |= PAN_COORDINATOR;  //accepts frames with only source addressing modes
 	} else {
    		FRMFILT0 &= ~PAN_COORDINATOR;  //rejects frames with only source addressing modes
  	}

	//#ifdef LOWSN_NO_CHECK_PHYMAC
	//FRMFILT0 &= ~FRAME_FILTER_EN;
	//FRMCTRL0 = FRMCTRL0_RESET_VALUE | AUTOACK;
	//#endif
	

	// 所有IEEE 802.15.4定义的帧都接收
	FRMFILT1 = 0x78;
	  /* Initialize SRCEXTPENDEN and SRCSHORTPENDEN to zeros */
	MAC_RADIO_SRC_MATCH_INIT_EXTPENDEN();//扩展地址使能或者禁止未决
	MAC_RADIO_SRC_MATCH_INIT_SHORTPENDEN();//源短地址使能或禁止未决


	FRMCTRL1 |= SET_RXENMASK_ON_TX;
	//set to max value as the FIFOP flag goes high when complete packet received
	MAC_RADIO_SET_RX_THRESHOLD(128);//缓存阈值不能超过127

	MAC_RADIO_RX_ON();//RX使能并校准频率合成器
	//RFST = SRXON;
	MAC_RADIO_FLUSH_TX_FIFO();//立即清除TXFIFO缓冲区
	MAC_RADIO_FLUSH_RX_FIFO();//立即清除RXFIFO缓冲区
	MAC_RADIO_TX_ON();//校准之后使能TX
	CSP_START_PROGRAM();//从写到指令寄存器的第一条指令开始执行CSP程序

	//this controls the frame pending bit in ACK frames.
	//because of auto-ack, we will not have time to determine if data
	//is actually pending or not.
	#if defined(LOWSN_RFD)
  		 MAC_RADIO_SACK();  //RFDs never have data pending for FFDs
	#else
 		 MAC_RADIO_SACKPEND();  //routers/
	#endif

	halSetRadioIEEEAddress();//通过软件写入扩展地址

	/* clear any accidental threshold interrupt that happened as part of power up sequence */
	MAC_RADIO_CLEAR_RX_THRESHOLD_INTERRUPT_FLAG();

	/* enable threshold interrupts */
	MAC_RADIO_ENABLE_RX_THRESHOLD_INTERRUPT();

	//MAC_MCU_SFD_ENABLE_INTERRUPT();

		  /* enable general RF interrupts */
	  IEN2 |= RFIE;

	  /* enable general RFERR interrupts */
	  IEN0 |= RFERRIE;


	return(LOWSN_STATUS_SUCCESS);

}

LOWSN_STATUS_ENUM halSendPacket(BYTE flen, BYTE *frm)
{
  BYTE len;
  LOWSN_STATUS_ENUM res;

  len = flen + PACKET_FOOTER_SIZE;

  DEBUG_STRING(DBG_INFO, "TX PKT Size: ");
  DEBUG_UINT8(DBG_INFO,len);
  DEBUG_STRING(DBG_INFO,"\n");

    if (len > 127) {
    //packet size is too large!
    return(LOWSN_STATUS_PHY_TX_PKT_TOO_BIG);
  }

    // Turn on receiver if its not on
       MAC_RADIO_FLUSH_RX_FIFO();
       MAC_RADIO_RX_ON();

    // Wait until the transceiver is idle   判断TXACTIVE 或可能的SFD中断
    // 发送SFD中断作为条件似乎有问题，但TXACTVIE作为条件没问题.
    // 应尽量不在状态机中用while死循环. 将来改进这个
    while (FSMSTAT1 & (BV(1) | BV(5) ));

    // Turn off RX frame done interrupt to avoid interference on the SPI interface

    RFIRQF1 = ~IRQ_TXDONE;   // Clear the RF TXDONE flag
    INT_SETFLAG_RF(INT_CLR);  //Clear processor interrupt flag
    RFIRQM0 &= ~BV(6);    // disable RXPKTDONE interrupt
   // IEN2 &= ~BV(0);   // disable general RF interrupts

    MAC_RADIO_FLUSH_TX_FIFO();         // Making sure that the TX FIFO is empty.

    RFD = len;
    while (flen) {RFD = *frm; frm++; flen--;}


     // If the RSSI value is not valid, enable receiver
    if(RSSI == 0x80)
   {
       MAC_RADIO_RX_ON();
      // Turning on Rx and waiting 320u-sec to make the RSSI value become valid.
      halWait(1);
   }
	
    doIEEE_backoff();

    MAC_RADIO_TX_ON_CCA();
    //MAC_RADIO_TX_ON() ;

    if(FSMSTAT0 > 30)  //is TX active?
    {
    // Asserting the status flag and enabling ACK reception if expected.
    phyTxStartCallBack();
    res = LOWSN_STATUS_SUCCESS;
	
    RFIRQM0 |= IRQ_RXPKTDONE; // enable RXPKTDONE interrupt
    RFIRQM1 |= IRQ_TXDONE;   //enable IRQ_TXDONE interrupt
    //IEN2 |= BV(0);   // enable general RF interrupts
    
    DEBUG_CHAR( DBG_TX,DBG_CHAR_TXSTART);
  }
  else
  {
    MAC_RADIO_FLUSH_TX_FIFO();           //empty buffer
    res = LOWSN_STATUS_PHY_CHANNEL_BUSY;
    RFIRQM1 &= ~IRQ_TXDONE;   //enable IRQ_TXDONE interrupt
    DEBUG_CHAR( DBG_TX,DBG_CHAR_TXBUSY);
  }
  
  return(res);

}
